Fix: Remove public folder and update baseURL

--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
 baseURL = 'https://mooreco.github.io/'
 languageCode = 'en-us'
-title = 'My New Hugo Site'
-theme = "PaperMod"
+title = 'The Moore Family'
+theme = 'PaperMod'
